--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "name": "pokemobile",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
